Implemented proper handling of hostnames with . Added DNS resolver