@@ -53,8 +53,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.lang.reflect.InvocationTargetException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
@@ -144,7 +143,7 @@ public class Client implements AutoCloseable {
 
     private Client(Collection<Endpoint> endpoints, Map<String,String> configuration,
                    ExecutorService sharedOperationExecutor, ColumnToMethodMatchingStrategy columnToMethodMatchingStrategy,
-                   Object metricsRegistry, Supplier<String> queryIdGenerator) {
+                   Object metricsRegistry, Supplier<String> queryIdGenerator, HostResolver hostResolver) {
         this.configuration = ClientConfigProperties.parseConfigMap(configuration);
         this.readOnlyConfig = Collections.unmodifiableMap(configuration);
         this.metricsRegistry = metricsRegistry;
@@ -191,7 +190,7 @@ public class Client implements AutoCloseable {
             this.lz4Factory = LZ4Factory.fastestJavaInstance();
         }
 
-        this.httpClientHelper = new HttpAPIClientHelper(this.configuration, metricsRegistry, initSslContext, lz4Factory);
+        this.httpClientHelper = new HttpAPIClientHelper(this.configuration, metricsRegistry, initSslContext, lz4Factory, hostResolver);
         this.serverVersion = configuration.getOrDefault(ClientConfigProperties.SERVER_VERSION.getKey(), "unknown");
         this.dbUser = configuration.getOrDefault(ClientConfigProperties.USER.getKey(), ClientConfigProperties.USER.getDefObjVal());
         this.typeHintMapping = (Map<ClickHouseDataType, Class<?>>) this.configuration.get(ClientConfigProperties.TYPE_HINT_MAPPING.getKey());
@@ -264,6 +263,7 @@ public class Client implements AutoCloseable {
         private ColumnToMethodMatchingStrategy columnToMethodMatchingStrategy;
         private Object metricRegistry = null;
         private Supplier<String> queryIdGenerator;
+        private HostResolver hostResolver;
 
         public Builder() {
             this.endpoints = new HashSet<>();
@@ -277,6 +277,7 @@ public class Client implements AutoCloseable {
 
             allowBinaryReaderToReuseBuffers(false);
             columnToMethodMatchingStrategy = DefaultColumnToMethodMatchingStrategy.INSTANCE;
+            hostResolver = HostResolver.DEFAULT;
         }
 
         /**
@@ -293,32 +294,37 @@ public class Client implements AutoCloseable {
          */
         public Builder addEndpoint(String endpoint) {
             try {
-                URL endpointURL = new URL(endpoint);
-
-                String protocolStr = endpointURL.getProtocol();
+                URI endpointUri = URI.create(endpoint);
+                String protocolStr = endpointUri.getScheme();
+                if (protocolStr == null) {
+                    throw new IllegalArgumentException("Protocol should be set in endpoint");
+                }
                 if (!protocolStr.equalsIgnoreCase("https") &&
                     !protocolStr.equalsIgnoreCase("http")) {
                     throw new IllegalArgumentException("Only HTTP and HTTPS protocols are supported");
                 }
 
                 boolean secure = protocolStr.equalsIgnoreCase("https");
-                String host = endpointURL.getHost();
+                ParsedAuthority authority = parseAuthority(endpointUri.getRawAuthority(), endpoint);
+                String host = authority.host;
                 if (host == null || host.isEmpty()) {
                     throw new IllegalArgumentException("Host cannot be empty in endpoint: " + endpoint);
                 }
 
-                int port = endpointURL.getPort();
+                int port = authority.port;
                 if (port <= 0) {
                     throw new ValidationUtils.SettingsValidationException("port", "Valid port must be specified");
                 }
 
-                String path = endpointURL.getPath();
+                String path = endpointUri.getPath();
                 if (path == null || path.isEmpty()) {
                     path = "/";
                 }
 
                 return addEndpoint(Protocol.HTTP, host, port, secure, path);
-            } catch (MalformedURLException e) {
+            } catch (ValidationUtils.SettingsValidationException e) {
+                throw e;
+            } catch (IllegalArgumentException e) {
                 throw new IllegalArgumentException("Endpoint should be a valid URL string, but was " + endpoint, e);
             }
         }
@@ -349,6 +355,78 @@ public class Client implements AutoCloseable {
             }
             return this;
 
+        }
+
+        /**
+         * Sets custom host resolver to resolve endpoint hostnames.
+         * This is useful in custom DNS environments such as Kubernetes or service mesh deployments.
+         * By default, {@link java.net.InetAddress#getByName(String)} is used.
+         *
+         * @param hostResolver resolver implementation
+         * @return this builder instance
+         */
+        public Builder setHostResolver(HostResolver hostResolver) {
+            ValidationUtils.checkNotNull(hostResolver, "hostResolver");
+            this.hostResolver = hostResolver;
+            return this;
+        }
+
+        private static ParsedAuthority parseAuthority(String rawAuthority, String endpoint) {
+            if (rawAuthority == null || rawAuthority.trim().isEmpty()) {
+                throw new IllegalArgumentException("Host cannot be empty in endpoint: " + endpoint);
+            }
+
+            String authority = rawAuthority;
+            int userInfoSeparator = authority.lastIndexOf('@');
+            if (userInfoSeparator >= 0) {
+                authority = authority.substring(userInfoSeparator + 1);
+            }
+
+            if (authority.startsWith("[")) {
+                int ipv6End = authority.indexOf(']');
+                if (ipv6End < 0) {
+                    throw new IllegalArgumentException("Invalid endpoint authority: " + rawAuthority);
+                }
+
+                String host = authority.substring(0, ipv6End + 1);
+                if (ipv6End + 1 >= authority.length() || authority.charAt(ipv6End + 1) != ':') {
+                    throw new ValidationUtils.SettingsValidationException("port", "Valid port must be specified");
+                }
+
+                String portPart = authority.substring(ipv6End + 2);
+                return new ParsedAuthority(host, parsePort(portPart));
+            }
+
+            int portSeparator = authority.lastIndexOf(':');
+            if (portSeparator <= 0 || portSeparator == authority.length() - 1) {
+                throw new ValidationUtils.SettingsValidationException("port", "Valid port must be specified");
+            }
+
+            if (authority.indexOf(':') != portSeparator) {
+                throw new IllegalArgumentException("Invalid endpoint authority: " + rawAuthority);
+            }
+
+            String host = authority.substring(0, portSeparator);
+            String portPart = authority.substring(portSeparator + 1);
+            return new ParsedAuthority(host, parsePort(portPart));
+        }
+
+        private static int parsePort(String portPart) {
+            try {
+                return Integer.parseInt(portPart);
+            } catch (NumberFormatException e) {
+                throw new ValidationUtils.SettingsValidationException("port", "Valid port must be specified");
+            }
+        }
+
+        private static final class ParsedAuthority {
+            private final String host;
+            private final int port;
+
+            private ParsedAuthority(String host, int port) {
+                this.host = host;
+                this.port = port;
+            }
         }
 
 
@@ -1152,7 +1230,7 @@ public class Client implements AutoCloseable {
             }
 
             return new Client(this.endpoints, this.configuration, this.sharedOperationExecutor,
-                this.columnToMethodMatchingStrategy, this.metricRegistry, this.queryIdGenerator);
+                this.columnToMethodMatchingStrategy, this.metricRegistry, this.queryIdGenerator, this.hostResolver);
         }
     }
 
